--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "node server.js"
   },
   "husky": {
     "hooks": {
@@ -37,5 +38,8 @@
     "prettier": "^3.4.2",
     "sass": "^1.83.0",
     "vite": "^6.0.3"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
